tests/errors/first_stage/operation/expected_closing_sqr_bracks/expected_closing_sqr_bracks.as
; expected closing square brackets
arr: .data 1, 2, 3
mov arr[0], arr[1